--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: RconnectPy
-Type: Package
-Title: What the Package Does (Title Case)
+Title: A R package for easy installation and importing of python modules
 Version: 0.1.0
-Author: Who wrote it
+Authors@R: 
+    person("Xinzhuo", "Huang", email = "xhuangcb@connect.ust.hk", role = c("aut", "cre"))
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: A R package for easy installation and importing of python modules.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
+URL: https://xinzhuo.work/project/
+
